Fri Nov 20 19:34:57 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* VERSION: Released 0.4.4

	* configure.in (try_asm_modules): For option --disable-asm

Tue Nov 10 19:32:40 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (MPI_SFLAGS): New.

Tue Nov 10 13:44:53 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* ABOUT-NLS: New
	* configure.in (AC_REVISION): New.

Sun Nov  8 18:20:35 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* VERSION: Set to 0.4.3

Sun Oct 25 19:49:37 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* Makefile.am (g10defs.h): New macro GNUPG_DATADIR.

Wed Oct 21 17:24:24 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in: Removed gettext kludge
	* acinclude.m4: Add patched AM_WITH_NKS macro

Tue Oct 20 19:03:36 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in: Kludge to make AM_GNU_GETTEXT work,
	changed some macors to more modern versions. Also
	changeg the all makefiles to remove duplicate ../intl.
	* acinclude.m4: Removed the gettext stuff, as this
	already comes with automake now.

Wed Oct 14 12:11:34 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (NAME_OF_DEV_RANDOM): New.
	(DYNLINK_MOD_CFLAGS): New.

Thu Oct  8 10:55:15 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* Makefile.am (g10defs.h): creates include file
	* acconfig.h: now includes g10defs.h
	* configure.in: Removed G10_LOCALEDIR and GNUPG_LIB

Thu Sep 17 18:49:40 1998  Werner Koch  (wk@(none))

	* Makefile.am (dist-hook): Now creates RPM file.
	* scripts/gnupg.spec: New template file for RPMs

Thu Jul 30 19:17:07 1998  Werner Koch  (wk@(none))

	* acinclude.h (WK_CHECK_IPC): New
	* configure.in : Add checks for SysV IPC

Thu Jun 25 11:18:49 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* configure.in (--disable-dynload): New.

Wed Jun 10 07:48:59 1998  Werner Koch,mobil,,,	(wk@tobold)

	* configure.in (GNUPG_LIBDIR): New.

Mon May 25 19:10:59 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* rand-unix.c (fast_random_poll): fixed syntax bug.
