@@ -48,3 +48,12 @@ TRANSLATIONS	Urko Lusa	??????????
 es_ES.po
 
 
+Other notes:
+============
+The file cipher/rndunix.c is heavily based on Peter Gutmann's
+rndunix.c from cryptlib. - He promised to add the GPL as an alternative
+license to this and some other files.  We don't have a dissclaimer for
+this file, but due to the fact that this is only needed for non-free
+system we can easily remove this from the distribution and put it as
+a module on some FTP server.
+
